[gd_scene load_steps=17 format=3 uid="uid://cv8v0vsrurle3"]

[ext_resource type="Texture2D" uid="uid://bpd8obpien6hy" path="res://images/decryptage.png" id="1_on685"]
[ext_resource type="Script" path="res://decryptage.gd" id="1_vq6rv"]
[ext_resource type="Texture2D" uid="uid://dys1b40bgmxac" path="res://images/syllabes/..png" id="2_k05fd"]
[ext_resource type="Texture2D" uid="uid://cgq55ljsh0lmn" path="res://images/syllabes/en.png" id="5_ah14x"]
[ext_resource type="Texture2D" uid="uid://87q0nq3rxjni" path="res://images/syllabes/er.png" id="6_bpmq7"]
[ext_resource type="Texture2D" uid="uid://47885niyn8w6" path="res://images/syllabes/les.png" id="12_lp7ao"]
[ext_resource type="Texture2D" uid="uid://b08judoywqk7x" path="res://images/syllabes/mi.png" id="14_ufeqf"]
[ext_resource type="Texture2D" uid="uid://bar1ilmr1ui2a" path="res://images/syllabes/ne.png" id="15_vheuw"]
[ext_resource type="Texture2D" uid="uid://bmgrk4jelrl5k" path="res://images/syllabes/ni.png" id="16_on5wh"]
[ext_resource type="Texture2D" uid="uid://b0xo45v078pxy" path="res://images/syllabes/pas.png" id="19_va7mt"]
[ext_resource type="Texture2D" uid="uid://0k73heurp45m" path="res://images/syllabes/pri.png" id="20_6tlpj"]
[ext_resource type="Texture2D" uid="uid://cjhr3aksvetqq" path="res://images/syllabes/r.png" id="21_b7at5"]
[ext_resource type="Texture2D" uid="uid://otyuq8yj8njb" path="res://images/syllabes/re.png" id="22_pyf10"]
[ext_resource type="Texture2D" uid="uid://cg2m1jihjqiks" path="res://images/syllabes/s.png" id="23_io0k4"]
[ext_resource type="Texture2D" uid="uid://cgnrmxxaea10s" path="res://images/syllabes/se.png" id="24_xem8k"]
[ext_resource type="Texture2D" uid="uid://nbsfbok4yvpp" path="res://images/syllabes/veu.png" id="27_vw45t"]

[node name="decryptage" type="Node2D"]
script = ExtResource("1_vq6rv")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1149.0
offset_bottom = 649.0
texture = ExtResource("1_on685")

[node name="point" type="TextureButton" parent="."]
offset_left = 230.0
offset_top = 487.0
offset_right = 320.0
offset_bottom = 555.0
texture_normal = ExtResource("2_k05fd")

[node name="en" type="TextureButton" parent="."]
offset_left = 507.0
offset_top = 561.0
offset_right = 597.0
offset_bottom = 629.0
texture_normal = ExtResource("5_ah14x")

[node name="er" type="TextureButton" parent="."]
offset_left = 661.0
offset_top = 486.0
offset_right = 751.0
offset_bottom = 554.0
texture_normal = ExtResource("6_bpmq7")

[node name="les" type="TextureButton" parent="."]
offset_left = 399.0
offset_top = 561.0
offset_right = 489.0
offset_bottom = 629.0
texture_normal = ExtResource("12_lp7ao")

[node name="mi" type="TextureButton" parent="."]
offset_left = 338.0
offset_top = 486.0
offset_right = 428.0
offset_bottom = 554.0
texture_normal = ExtResource("14_ufeqf")

[node name="ne" type="TextureButton" parent="."]
offset_left = 447.0
offset_top = 485.0
offset_right = 537.0
offset_bottom = 553.0
texture_normal = ExtResource("15_vheuw")

[node name="ni" type="TextureButton" parent="."]
offset_left = 555.0
offset_top = 486.0
offset_right = 645.0
offset_bottom = 554.0
texture_normal = ExtResource("16_on5wh")

[node name="pas" type="TextureButton" parent="."]
offset_left = 769.0
offset_top = 486.0
offset_right = 859.0
offset_bottom = 554.0
texture_normal = ExtResource("19_va7mt")

[node name="pri" type="TextureButton" parent="."]
offset_left = 873.0
offset_top = 485.0
offset_right = 963.0
offset_bottom = 553.0
texture_normal = ExtResource("20_6tlpj")

[node name="r" type="TextureButton" parent="."]
offset_left = 827.0
offset_top = 559.0
offset_right = 917.0
offset_bottom = 627.0
texture_normal = ExtResource("21_b7at5")

[node name="re" type="TextureButton" parent="."]
offset_left = 718.0
offset_top = 562.0
offset_right = 808.0
offset_bottom = 630.0
texture_normal = ExtResource("22_pyf10")

[node name="s" type="TextureButton" parent="."]
offset_left = 179.0
offset_top = 561.0
offset_right = 269.0
offset_bottom = 629.0
texture_normal = ExtResource("23_io0k4")

[node name="se" type="TextureButton" parent="."]
offset_left = 290.0
offset_top = 562.0
offset_right = 380.0
offset_bottom = 630.0
texture_normal = ExtResource("24_xem8k")

[node name="veu" type="TextureButton" parent="."]
offset_left = 615.0
offset_top = 561.0
offset_right = 705.0
offset_bottom = 629.0
texture_normal = ExtResource("27_vw45t")

[node name="submit" type="Button" parent="."]
offset_left = 997.0
offset_top = 571.0
offset_right = 1142.0
offset_bottom = 622.0
text = "Soumettre"

[node name="texte_chiffre" type="Label" parent="."]
offset_left = 158.0
offset_top = 80.0
offset_right = 1005.0
offset_bottom = 385.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 50
theme_override_font_sizes/font_size = 19
text = "124    22  125  46  345      125      226  10  36      89      56  22  12      124      548  85  54  326  345  478    45      226  78    95      522  46  655      21      548  85  54  326  345      22      754      52      22      235  522    478    124      22  125  46  345      125      89   655  56  856      89      124     
 89  655  522  965  345  478  "
horizontal_alignment = 1
autowrap_mode = 2

[node name="labels_txt" type="Node2D" parent="."]

[node name="Label" type="Button" parent="labels_txt"]
offset_left = 172.0
offset_top = 120.0
offset_right = 212.0
offset_bottom = 143.0

[node name="Label2" type="Button" parent="labels_txt"]
offset_left = 402.0
offset_top = 271.0
offset_right = 442.0
offset_bottom = 294.0

[node name="Label3" type="Button" parent="labels_txt"]
offset_left = 863.0
offset_top = 268.0
offset_right = 903.0
offset_bottom = 291.0

[node name="Label4" type="Button" parent="labels_txt"]
offset_left = 226.0
offset_top = 120.0
offset_right = 254.0
offset_bottom = 143.0

[node name="Label5" type="Button" parent="labels_txt"]
offset_left = 257.0
offset_top = 120.0
offset_right = 297.0
offset_bottom = 143.0

[node name="Label6" type="Button" parent="labels_txt"]
offset_left = 300.0
offset_top = 121.0
offset_right = 326.0
offset_bottom = 144.0

[node name="Label7" type="Button" parent="labels_txt"]
offset_left = 329.0
offset_top = 120.0
offset_right = 369.0
offset_bottom = 143.0

[node name="Label8" type="Button" parent="labels_txt"]
offset_left = 395.0
offset_top = 119.0
offset_right = 435.0
offset_bottom = 142.0

[node name="Label9" type="Button" parent="labels_txt"]
offset_left = 456.0
offset_top = 120.0
offset_right = 496.0
offset_bottom = 143.0

[node name="Label10" type="Button" parent="labels_txt"]
offset_left = 499.0
offset_top = 120.0
offset_right = 525.0
offset_bottom = 143.0

[node name="Label11" type="Button" parent="labels_txt"]
offset_left = 527.0
offset_top = 120.0
offset_right = 562.0
offset_bottom = 143.0

[node name="Label12" type="Button" parent="labels_txt"]
offset_left = 580.0
offset_top = 120.0
offset_right = 610.0
offset_bottom = 143.0

[node name="Label13" type="Button" parent="labels_txt"]
offset_left = 632.0
offset_top = 120.0
offset_right = 665.0
offset_bottom = 143.0

[node name="Label14" type="Button" parent="labels_txt"]
offset_left = 667.0
offset_top = 120.0
offset_right = 698.0
offset_bottom = 143.0

[node name="Label15" type="Button" parent="labels_txt"]
offset_left = 701.0
offset_top = 120.0
offset_right = 729.0
offset_bottom = 143.0

[node name="Label16" type="Button" parent="labels_txt"]
offset_left = 750.0
offset_top = 120.0
offset_right = 784.0
offset_bottom = 143.0

[node name="Label17" type="Button" parent="labels_txt"]
offset_left = 808.0
offset_top = 120.0
offset_right = 848.0
offset_bottom = 143.0

[node name="Label18" type="Button" parent="labels_txt"]
offset_left = 850.0
offset_top = 120.0
offset_right = 882.0
offset_bottom = 143.0

[node name="Label19" type="Button" parent="labels_txt"]
offset_left = 884.0
offset_top = 120.0
offset_right = 911.0
offset_bottom = 143.0

[node name="Label20" type="Button" parent="labels_txt"]
offset_left = 914.0
offset_top = 120.0
offset_right = 954.0
offset_bottom = 143.0

[node name="Label21" type="Button" parent="labels_txt"]
offset_left = 956.0
offset_top = 120.0
offset_right = 991.0
offset_bottom = 143.0

[node name="Label22" type="Button" parent="labels_txt"]
offset_left = 185.0
offset_top = 189.0
offset_right = 225.0
offset_bottom = 212.0

[node name="Label23" type="Button" parent="labels_txt"]
offset_left = 245.0
offset_top = 189.0
offset_right = 275.0
offset_bottom = 212.0

[node name="Label24" type="Button" parent="labels_txt"]
offset_left = 295.0
offset_top = 189.0
offset_right = 335.0
offset_bottom = 212.0

[node name="Label25" type="Button" parent="labels_txt"]
offset_left = 338.0
offset_top = 189.0
offset_right = 366.0
offset_bottom = 212.0

[node name="Label26" type="Button" parent="labels_txt"]
offset_left = 383.0
offset_top = 189.0
offset_right = 413.0
offset_bottom = 212.0

[node name="Label27" type="Button" parent="labels_txt"]
offset_left = 441.0
offset_top = 190.0
offset_right = 472.0
offset_bottom = 213.0

[node name="Label28" type="Button" parent="labels_txt"]
offset_left = 477.0
offset_top = 190.0
offset_right = 506.0
offset_bottom = 213.0

[node name="Label29" type="Button" parent="labels_txt"]
offset_left = 510.0
offset_top = 190.0
offset_right = 546.0
offset_bottom = 213.0

[node name="Label30" type="Button" parent="labels_txt"]
offset_left = 566.0
offset_top = 190.0
offset_right = 602.0
offset_bottom = 213.0

[node name="Label31" type="Button" parent="labels_txt"]
offset_left = 624.0
offset_top = 191.0
offset_right = 659.0
offset_bottom = 214.0

[node name="Label32" type="Button" parent="labels_txt"]
offset_left = 662.0
offset_top = 191.0
offset_right = 690.0
offset_bottom = 214.0

[node name="Label33" type="Button" parent="labels_txt"]
offset_left = 695.0
offset_top = 191.0
offset_right = 723.0
offset_bottom = 214.0

[node name="Label34" type="Button" parent="labels_txt"]
offset_left = 729.0
offset_top = 191.0
offset_right = 760.0
offset_bottom = 214.0

[node name="Label35" type="Button" parent="labels_txt"]
offset_left = 766.0
offset_top = 191.0
offset_right = 802.0
offset_bottom = 214.0

[node name="Label36" type="Button" parent="labels_txt"]
offset_left = 832.0
offset_top = 190.0
offset_right = 860.0
offset_bottom = 213.0

[node name="Label37" type="Button" parent="labels_txt"]
offset_left = 882.0
offset_top = 191.0
offset_right = 922.0
offset_bottom = 214.0

[node name="Label38" type="Button" parent="labels_txt"]
offset_left = 945.0
offset_top = 193.0
offset_right = 975.0
offset_bottom = 216.0

[node name="Label39" type="Button" parent="labels_txt"]
offset_left = 204.0
offset_top = 273.0
offset_right = 232.0
offset_bottom = 296.0

[node name="Label40" type="Button" parent="labels_txt"]
offset_left = 265.0
offset_top = 272.0
offset_right = 293.0
offset_bottom = 295.0

[node name="Label41" type="Button" parent="labels_txt"]
offset_left = 297.0
offset_top = 272.0
offset_right = 334.0
offset_bottom = 295.0

[node name="Label42" type="Button" parent="labels_txt"]
offset_left = 354.0
offset_top = 271.0
offset_right = 385.0
offset_bottom = 294.0

[node name="Label43" type="Button" parent="labels_txt"]
offset_left = 809.0
offset_top = 268.0
offset_right = 842.0
offset_bottom = 291.0

[node name="Label44" type="Button" parent="labels_txt"]
offset_left = 463.0
offset_top = 271.0
offset_right = 493.0
offset_bottom = 294.0

[node name="Label45" type="Button" parent="labels_txt"]
offset_left = 501.0
offset_top = 271.0
offset_right = 534.0
offset_bottom = 294.0

[node name="Label46" type="Button" parent="labels_txt"]
offset_left = 546.0
offset_top = 270.0
offset_right = 569.0
offset_bottom = 293.0

[node name="Label47" type="Button" parent="labels_txt"]
offset_left = 576.0
offset_top = 270.0
offset_right = 604.0
offset_bottom = 293.0

[node name="Label48" type="Button" parent="labels_txt"]
offset_left = 635.0
offset_top = 270.0
offset_right = 675.0
offset_bottom = 293.0

[node name="Label49" type="Button" parent="labels_txt"]
offset_left = 698.0
offset_top = 270.0
offset_right = 726.0
offset_bottom = 293.0

[node name="Label50" type="Button" parent="labels_txt"]
offset_left = 731.0
offset_top = 270.0
offset_right = 771.0
offset_bottom = 293.0

[node name="Label51" type="Button" parent="labels_txt"]
offset_left = 774.0
offset_top = 269.0
offset_right = 803.0
offset_bottom = 292.0

[node name="Label52" type="Button" parent="labels_txt"]
offset_left = 925.0
offset_top = 267.0
offset_right = 965.0
offset_bottom = 290.0

[node name="Label53" type="Button" parent="labels_txt"]
offset_left = 460.0
offset_top = 348.0
offset_right = 492.0
offset_bottom = 371.0

[node name="Label54" type="Button" parent="labels_txt"]
offset_left = 497.0
offset_top = 348.0
offset_right = 534.0
offset_bottom = 371.0

[node name="Label55" type="Button" parent="labels_txt"]
offset_left = 538.0
offset_top = 348.0
offset_right = 574.0
offset_bottom = 371.0

[node name="Label56" type="Button" parent="labels_txt"]
offset_left = 577.0
offset_top = 347.0
offset_right = 617.0
offset_bottom = 370.0

[node name="Label57" type="Button" parent="labels_txt"]
offset_left = 622.0
offset_top = 348.0
offset_right = 662.0
offset_bottom = 371.0

[node name="Label58" type="Button" parent="labels_txt"]
offset_left = 665.0
offset_top = 347.0
offset_right = 705.0
offset_bottom = 370.0

[connection signal="pressed" from="point" to="." method="send_syllable" binds= ["."]]
[connection signal="pressed" from="en" to="." method="send_syllable" binds= ["en"]]
[connection signal="pressed" from="er" to="." method="send_syllable" binds= ["er"]]
[connection signal="pressed" from="les" to="." method="send_syllable" binds= ["les"]]
[connection signal="pressed" from="mi" to="." method="send_syllable" binds= ["mi"]]
[connection signal="pressed" from="ne" to="." method="send_syllable" binds= ["ne"]]
[connection signal="pressed" from="ni" to="." method="send_syllable" binds= ["ni"]]
[connection signal="pressed" from="pas" to="." method="send_syllable" binds= ["pas"]]
[connection signal="pressed" from="pri" to="." method="send_syllable" binds= ["pri"]]
[connection signal="pressed" from="r" to="." method="send_syllable" binds= ["r"]]
[connection signal="pressed" from="re" to="." method="send_syllable" binds= ["re"]]
[connection signal="pressed" from="s" to="." method="send_syllable" binds= ["s"]]
[connection signal="pressed" from="se" to="." method="send_syllable" binds= ["se"]]
[connection signal="pressed" from="veu" to="." method="send_syllable" binds= ["veu"]]
[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="labels_txt/Label" to="." method="replace" binds= [124]]
[connection signal="pressed" from="labels_txt/Label2" to="." method="replace" binds= [478]]
[connection signal="pressed" from="labels_txt/Label3" to="." method="replace" binds= [89]]
[connection signal="pressed" from="labels_txt/Label4" to="." method="replace" binds= [22]]
[connection signal="pressed" from="labels_txt/Label5" to="." method="replace" binds= [125]]
[connection signal="pressed" from="labels_txt/Label6" to="." method="replace" binds= [46]]
[connection signal="pressed" from="labels_txt/Label7" to="." method="replace" binds= [345]]
[connection signal="pressed" from="labels_txt/Label8" to="." method="replace" binds= [125]]
[connection signal="pressed" from="labels_txt/Label9" to="." method="replace" binds= [226]]
[connection signal="pressed" from="labels_txt/Label10" to="." method="replace" binds= [10]]
[connection signal="pressed" from="labels_txt/Label11" to="." method="replace" binds= [36]]
[connection signal="pressed" from="labels_txt/Label12" to="." method="replace" binds= [89]]
[connection signal="pressed" from="labels_txt/Label13" to="." method="replace" binds= [56]]
[connection signal="pressed" from="labels_txt/Label14" to="." method="replace" binds= [22]]
[connection signal="pressed" from="labels_txt/Label15" to="." method="replace" binds= [12]]
[connection signal="pressed" from="labels_txt/Label16" to="." method="replace" binds= [124]]
[connection signal="pressed" from="labels_txt/Label17" to="." method="replace" binds= [548]]
[connection signal="pressed" from="labels_txt/Label18" to="." method="replace" binds= [85]]
[connection signal="pressed" from="labels_txt/Label19" to="." method="replace" binds= [54]]
[connection signal="pressed" from="labels_txt/Label20" to="." method="replace" binds= [326]]
[connection signal="pressed" from="labels_txt/Label21" to="." method="replace" binds= [345]]
[connection signal="pressed" from="labels_txt/Label22" to="." method="replace" binds= [478]]
[connection signal="pressed" from="labels_txt/Label23" to="." method="replace" binds= [45]]
[connection signal="pressed" from="labels_txt/Label24" to="." method="replace" binds= [226]]
[connection signal="pressed" from="labels_txt/Label25" to="." method="replace" binds= [78]]
[connection signal="pressed" from="labels_txt/Label26" to="." method="replace" binds= [95]]
[connection signal="pressed" from="labels_txt/Label27" to="." method="replace" binds= [522]]
[connection signal="pressed" from="labels_txt/Label28" to="." method="replace" binds= [46]]
[connection signal="pressed" from="labels_txt/Label29" to="." method="replace" binds= [655]]
[connection signal="pressed" from="labels_txt/Label30" to="." method="replace" binds= [21]]
[connection signal="pressed" from="labels_txt/Label31" to="." method="replace" binds= [548]]
[connection signal="pressed" from="labels_txt/Label32" to="." method="replace" binds= [85]]
[connection signal="pressed" from="labels_txt/Label33" to="." method="replace" binds= [54]]
[connection signal="pressed" from="labels_txt/Label34" to="." method="replace" binds= [326]]
[connection signal="pressed" from="labels_txt/Label35" to="." method="replace" binds= [345]]
[connection signal="pressed" from="labels_txt/Label36" to="." method="replace" binds= [22]]
[connection signal="pressed" from="labels_txt/Label37" to="." method="replace" binds= [754]]
[connection signal="pressed" from="labels_txt/Label38" to="." method="replace" binds= [52]]
[connection signal="pressed" from="labels_txt/Label39" to="." method="replace" binds= [22]]
[connection signal="pressed" from="labels_txt/Label40" to="." method="replace" binds= [235]]
[connection signal="pressed" from="labels_txt/Label41" to="." method="replace" binds= [522]]
[connection signal="pressed" from="labels_txt/Label42" to="." method="replace" binds= [478]]
[connection signal="pressed" from="labels_txt/Label43" to="." method="replace" binds= [856]]
[connection signal="pressed" from="labels_txt/Label44" to="." method="replace" binds= [22]]
[connection signal="pressed" from="labels_txt/Label45" to="." method="replace" binds= [125]]
[connection signal="pressed" from="labels_txt/Label46" to="." method="replace" binds= [46]]
[connection signal="pressed" from="labels_txt/Label47" to="." method="replace" binds= [345]]
[connection signal="pressed" from="labels_txt/Label48" to="." method="replace" binds= [125]]
[connection signal="pressed" from="labels_txt/Label49" to="." method="replace" binds= [89]]
[connection signal="pressed" from="labels_txt/Label50" to="." method="replace" binds= [655]]
[connection signal="pressed" from="labels_txt/Label51" to="." method="replace" binds= [56]]
[connection signal="pressed" from="labels_txt/Label52" to="." method="replace" binds= [124]]
[connection signal="pressed" from="labels_txt/Label53" to="." method="replace" binds= [89]]
[connection signal="pressed" from="labels_txt/Label54" to="." method="replace" binds= [655]]
[connection signal="pressed" from="labels_txt/Label55" to="." method="replace" binds= [522]]
[connection signal="pressed" from="labels_txt/Label56" to="." method="replace" binds= [965]]
[connection signal="pressed" from="labels_txt/Label57" to="." method="replace" binds= [345]]
[connection signal="pressed" from="labels_txt/Label58" to="." method="replace" binds= [478]]
